feat: refactoring and multi-kc support
