# src/main/java/org/tkit/onecx/iam/kc/rs/internal/controllers/UserRestController.java
@@ -7,40 +7,35 @@ import jakarta.ws.rs.core.Response;
 
 import org.jboss.resteasy.reactive.RestResponse;
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
-import org.tkit.onecx.iam.kc.domain.service.KeycloakAdminService;
 import org.tkit.onecx.iam.kc.domain.service.KeycloakException;
+import org.tkit.onecx.iam.kc.domain.service.KeycloakUserService;
 import org.tkit.onecx.iam.kc.rs.internal.mappers.ExceptionMapper;
-import org.tkit.onecx.iam.kc.rs.internal.mappers.RoleMapper;
 import org.tkit.quarkus.log.cdi.LogService;
 import org.tkit.quarkus.rs.context.token.TokenException;
 
-import gen.org.tkit.onecx.iam.kc.internal.RolesInternalApi;
+import gen.org.tkit.onecx.iam.kc.internal.UserInternalApi;
 import gen.org.tkit.onecx.iam.kc.internal.model.ProblemDetailResponseDTO;
-import gen.org.tkit.onecx.iam.kc.internal.model.RoleSearchCriteriaDTO;
+import gen.org.tkit.onecx.iam.kc.internal.model.UserResetPasswordRequestDTO;
 
 @LogService
 @ApplicationScoped
-public class RolesRestController implements RolesInternalApi {
-
+public class UserRestController implements UserInternalApi {
     @Inject
-    KeycloakAdminService adminService;
-
-    @Inject
-    RoleMapper mapper;
+    KeycloakUserService userService;
 
     @Inject
     ExceptionMapper exceptionMapper;
 
     @Override
-    public Response getUserRoles(String userId) {
-        return Response.ok().entity(mapper.map(adminService.getUserRoles(userId))).build();
+    public Response getUserProvider() {
+        var providerResponse = userService.getCurrentProviderAndRealm();
+        return Response.status(Response.Status.OK).entity(providerResponse).build();
     }
 
     @Override
-    public Response searchRolesByCriteria(RoleSearchCriteriaDTO roleSearchCriteriaDTO) {
-        var criteria = mapper.map(roleSearchCriteriaDTO);
-        var result = adminService.searchRoles(criteria);
-        return Response.ok(mapper.map(result)).build();
+    public Response resetPassword(UserResetPasswordRequestDTO userResetPasswordRequestDTO) {
+        userService.resetPassword(userResetPasswordRequestDTO.getPassword());
+        return Response.noContent().build();
     }
 
     @ServerExceptionMapper
